# taxcite

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  render.yaml
.github/workflows/: tests.yml
docs/: failure-modes.md
eval/: dataset.jsonl
src/taxcite/: __main__.py  agent.py  chunk.py  cost.py  db.py  embed.py  eval_harness.py  fetch.py  manifest.py  parse.py  server.py
tests/: test_agent.py  test_chunk.py  test_db.py  test_db_integration.py  test_embed.py  test_eval_harness.py  test_main.py  test_server.py
