[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "taxcite"
version = "0.1.0"
description = "Agentic RAG over IRS publications with a verifiable eval harness"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Corey Stevens" }]
dependencies = [
  "httpx>=0.27",
  "pdfplumber>=0.11",
  "voyageai>=0.3",
  "psycopg2-binary>=2.9",
  "pgvector>=0.4",
  "numpy>=1.26",
  "langgraph>=0.4,<0.6",
  "langsmith>=0.2,<0.4",
  "anthropic>=0.50,<2.0",
  "rolling-cost-cap>=0.1",
  "fastapi>=0.115",
  "slowapi>=0.1.9",
  "uvicorn[standard]>=0.30",
  "opentelemetry-sdk>=1.25",
  "opentelemetry-instrumentation-fastapi>=0.46b0",
  "opentelemetry-exporter-otlp-proto-grpc>=1.25",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-httpx>=0.34",
  "ruff>=0.4",
]
eval = [
  "ragas>=0.2",
  "datasets>=2.20",
]

[tool.hatch.build.targets.wheel]
packages = ["src/taxcite"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
